[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Graphics/Single_Textures/lake.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sound/Ambient/lake_ambience.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/lake.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Fade In Out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_audio_stream_playing"
}, {
"args": [ true ],
"method": "set_audio_stream_playing"
} ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="Lake" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SoundFadeInTween" type="Tween" parent="."]

[node name="SoundFadeOutTween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0
autoplay = true
bus = "Ambient"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SoundAnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade In Out" = SubResource( 1 )
"anims/Fade Sound In" = SubResource( 2 )
"anims/Fade Sound Out" = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -22.7068, -23.0264, -13.3041, -23.1588, -4.43111, -16.9345, 13.4473, -16.802, 14.1095, -13.8885, 23.3798, -13.4912, 28.942, -8.32634, 32.915, 2.00343, 33.0474, 7.96291, 18.7446, 22.9278, 8.41488, 20.8089, -5.09328, 24.9143, -19.9258, 19.2197, -25.3555, 18.8224, -32.7717, 13.5251, -32.9042, 7.30074, -28.9312, 3.59262, -32.3744, -1.70469, -33.3015, -14.4183 )

[connection signal="tween_completed" from="SoundFadeOutTween" to="." method="_on_SoundFadeOutTween_tween_completed"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
